Fix dropdown dark mode color

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -16,9 +16,6 @@
   --ifm-color-primary-lightest: rgb(146, 224, 208);
   --ifm-code-font-size: 95%;
 }
-.alert--info {
-  --ifm-alert-background-color: rgb(255, 255, 255);
-}
 
 .docusaurus-highlight-code-line {
   background-color: rgb(72, 77, 91);
